# pieces

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake_publish.yml  cmake_test.yml
cmake/: Libraries.cmake
include/pieces/: piece.h  piecetable.h  textbuffer.h
src/: CMakeLists.txt  piece.c  piecetable.c  textbuffer.c
test/: CMakeLists.txt  testrunner.c
test/textbuffer/: CMakeLists.txt  create.c
